// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HtmlWidget /> should render the widget 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Html)
    settings={
      {
        "defaultPadding": false,
        "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
      }
    }
  >
    <Html
      navigate={[Function]}
      settings={
        {
          "defaultPadding": false,
          "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
        }
      }
    >
      <div
        style={{}}
      >
        <Connect(HtmlSanitizer)
          className="tss-4tmmz6-root"
          decode={true}
          processStyles={true}
          settings={
            {
              "handleClick": [Function],
              "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
            }
          }
        >
          <HtmlSanitizer
            className="tss-4tmmz6-root"
            comfortCookiesAccepted={true}
            decode={true}
            navigate={[Function]}
            processStyles={true}
            settings={
              {
                "handleClick": [Function],
                "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
              }
            }
            statisticsCookiesAccepted={true}
            wrapper={[Function]}
          >
            <EmbeddedMedia
              cookieConsentSettings={
                {
                  "comfortCookiesAccepted": true,
                  "statisticsCookiesAccepted": true,
                }
              }
            >
              <div
                className="tss-4tmmz6-root common__html-sanitizer"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<h1>Hello World!</h1>",
                  }
                }
                onClickCapture={[Function]}
              />
            </EmbeddedMedia>
          </HtmlSanitizer>
        </Connect(HtmlSanitizer)>
      </div>
    </Html>
  </Connect(Html)>
</Provider>
`;

exports[`<HtmlWidget /> should render the widget with a padding 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <Connect(Html)
    settings={
      {
        "defaultPadding": true,
        "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
      }
    }
  >
    <Html
      navigate={[Function]}
      settings={
        {
          "defaultPadding": true,
          "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
        }
      }
    >
      <div
        style={
          {
            "padding": 16,
          }
        }
      >
        <Connect(HtmlSanitizer)
          className="tss-4tmmz6-root"
          decode={true}
          processStyles={true}
          settings={
            {
              "handleClick": [Function],
              "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
            }
          }
        >
          <HtmlSanitizer
            className="tss-4tmmz6-root"
            comfortCookiesAccepted={true}
            decode={true}
            navigate={[Function]}
            processStyles={true}
            settings={
              {
                "handleClick": [Function],
                "html": "&lt;h1&gt;Hello World!&lt;/h1&gt;",
              }
            }
            statisticsCookiesAccepted={true}
            wrapper={[Function]}
          >
            <EmbeddedMedia
              cookieConsentSettings={
                {
                  "comfortCookiesAccepted": true,
                  "statisticsCookiesAccepted": true,
                }
              }
            >
              <div
                className="tss-4tmmz6-root common__html-sanitizer"
                dangerouslySetInnerHTML={
                  {
                    "__html": "<h1>Hello World!</h1>",
                  }
                }
                onClickCapture={[Function]}
              />
            </EmbeddedMedia>
          </HtmlSanitizer>
        </Connect(HtmlSanitizer)>
      </div>
    </Html>
  </Connect(Html)>
</Provider>
`;
